# msampler

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  docs.md
src/: CMakeLists.txt  bounded.hpp  bounds.hpp  msampler.cpp  msampler.hpp  range.hpp
test/: CMakeLists.txt  test_bounds.cpp  test_initialisation.cpp
